# peripage-a40

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: REVERSE-ENGINEERING.md
peripage_a40/: __init__.py  cli.py  encode.py  job.py  render.py  transport.py
tests/: test_encode.py
